business declares: size on mobile; ensure news-tiles have a white bg

--- a/scss/news.scss
+++ b/scss/news.scss
@@ -112,6 +112,7 @@
 		margin-bottom: 0.6rem;
 		position: relative;
 		overflow: hidden;
+		background-color: white;
 
 		h3 {
 			font-size: 2rem;
